[metadata]
name = hashtagbombbuilder
summary = Hashtag Bomb Builder
author = Hashtag Bomb Builder inc.
author-email = admin@hashtagbombbuilder.com
home-page = http://hashtagbombbuilder.com
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    hashtagbombbuilder
